@@ -7,17 +7,19 @@ DIST patch-3.11-rc2.xz 6665160 SHA256 2bcee1dd68e5fab8c3db9738938b37b237dbe56b9b
 DIST patch-3.11-rc3.xz 6767140 SHA256 ea7b0faf5868711388452ae228197f01a0aed09917d3ed030082f84ebf4bf19e SHA512 7fd4d5ce00f9d6ad2b2751ef1b3774b853d5c0c3e8f4b9cd417b42d84012d6a6cb8e17dcebcc9d1c9ab98f3bda77b9aa49bfa5a0183470e3c8389405289bdbd7 WHIRLPOOL ea1a8a18b3d39619f303d11526097759e82d6199c18ea24605b9c3394ffa55d0eec0592c941a546db9b530d6eb8e65d08ede0f9305abdc36fe2354586bdfe00f
 DIST patch-3.11-rc4.xz 6849472 SHA256 a10ca38da024a21c2461398271f66dde9e49d30cd1ea566f7294a54f207d635f SHA512 875b830ec65711e84844a39d628b9a159b1802fae955e820ab5b9c52a3da1373d71fefa7c1afbf8c266a1fe09dfcf922961b28ec600a5ef0da3dadd37bd82b17 WHIRLPOOL 7b5978fe12ceb48686122e051dff3cd777c1d6a9eb6d2333f7bb3dfbc193b11d6f2a39d90683f0055afd1a3ab5d1806baf8204b982435e42d8b5732aef06eaef
 DIST patch-3.11-rc5.xz 6878428 SHA256 72ad226a3709d6d3631ac4afc31ad446d3445476a2f0e121d5749dcc72aba82b SHA512 f766edbb3a554001e576ed999999b7b7beb59c4737314946796375ed77d6da2c4c4f8875c9d35fef5adebb10d9a16cedb6d288e5aef921bd53b660eda433cb13 WHIRLPOOL 9295b56e6bffefd4866087779853a1c0118ef2247ed1d84b995983a305a6617161c28487384026f2968727f2d03c7d462eda65342cbe26257be1736f99f9c024
+DIST patch-3.11-rc6.xz 6906752 SHA256 749a68ec94d990dab23ead3e11fe10cde7a909d26d74bfe3ca4bab74e5be3ee7 SHA512 125acade9a82f6800477bfdfa02f098f03b00864e5fdd6abf1534076c20e17fc63589dd67abed06d1057f892205c7013673d04ea8019b7d3973effdcaf98a142 WHIRLPOOL 35ce9f43a7c514a3e637900d574ff6cc6b4158296fa5e01b8b31e3936f8db44106974697b033d008471451c3b515e63d869306d7db2fc43387f16877ad8e99e4
 EBUILD git-sources-3.11_rc1.ebuild 1193 SHA256 24df3e37800b6e973393e59f1becc32f5bc665a8bc6bc9a8febd4cb2905f210e SHA512 4e12cfad79d99e789d257b746489bb339ebc9e86fbfacb8b5bdccf6c6599cae5d8aef0cec3555f759e21abfc0c9d6704a547f96e75876c22275864e698cd59c1 WHIRLPOOL 8f8a122fe5afe65f86c3535fa624a1ab8b2973f80232f8134e5ed7b5b0d6a18bb3b7a348f40c7410969547832d22620df2458b9df0a2613e86794bf6e7c282f0
 EBUILD git-sources-3.11_rc2.ebuild 1193 SHA256 49d2f89e7f4db32ec78c7f8c301cafc93f371de5e8121b2e12722437ec65aafc SHA512 71f4f1dc26135da97cf730fd45fb4280d5aafb9f96d141a719a2eca853eaed2a31c03812f609da6c51705b6c08d25b6c2c7b77a2bb4ce32f4ce7c1151ff918b8 WHIRLPOOL 39c0b7ceaea5ab255b231b32236648f8e1abb7a93888361a1cb7c7180e10413d510ab02f55ba0acc891f55a03142e86eb3e2ee54d333cbc641d61baf75eaa9c8
 EBUILD git-sources-3.11_rc3.ebuild 1194 SHA256 037b1eccaa8121100ab99d9902ebb80ba23087af178f8655acee17d13ee0598a SHA512 8b8229287d446c5bbb5b4efc007d63ccdcaf0af4873b440c2ae05c4e74a20689a06937e28b519d22395412100e3655060ff656e61f3278070dcb3d2599ead712 WHIRLPOOL 11bbb842ee8ae421506db5b436a66da7398254027568c0f11c01c9b1b6bc336081feaa85507cbe36984fdfa2c748f1b83bc54b4e1c3f9bb2cc9ba553d7294772
 EBUILD git-sources-3.11_rc4.ebuild 1194 SHA256 e3bc0b088769b5b7ef5675e0019e7af69e051d5b942416afe74eefb89b81c747 SHA512 bf6476f9cbebb7edaf673cf02daacd4328baf3a9b711bc3ded21dab5115987425c8639b1adb6fcbe456877d0ce8f54b21f04f41a27b6284d4d7ef5ac396dc771 WHIRLPOOL 011a242c773dc52729ac78395dd1f5f08f5e352e1f0e220845c2ee7ceeaa3bfaebde973111f4fc8777ead6c79a3e6322258bb532863c8f8bbe3b4eb145e389f3
 EBUILD git-sources-3.11_rc5.ebuild 1194 SHA256 ac08c62cdec3d9078494fc4d9dc75d6590647dc432448b865b6def1e59ec5869 SHA512 d7c30a40725e5b8144d1f5e30a007a4c45b06c1dc81f9ed343ebbec4b04733ab2aeaf1b5de88481104c6fbea794bc64bd3d8c21524019124345fb23194edd58b WHIRLPOOL 3aed897b5611109f3cd66e378cad028634a0780b3fa2c52aeb1f0dcbc5b9c1648af76000a66adefb9d6d27900aae521b94bdf2d9d3a88b9001c37c9217be3cd1
-MISC ChangeLog 34907 SHA256 8d6b66b37b7592019017a8d46271d271a1503e4a28130c5c0341f25cd0054024 SHA512 0901cdfbdaac646287c187655dcebf160d26bbcb079e45cfd3d0fce424e45ce7c8528a1b7fbb0c544159121cc314f48ef81a1be29437a570ee4fba24fefe3331 WHIRLPOOL 2e56e696605d198ede245283936dba6e392a8a05bc98757d0f375385a07ca440bbf34c9fb04d02178bc890ed30a07070ff4fed5f5c9377502804574fa5030765
+EBUILD git-sources-3.11_rc6.ebuild 1194 SHA256 bd34dcd805e4dd3f1e3925ba0bd3835761d055c3dc522fe3f79ab06623e6e58f SHA512 5cbe138eb00eb1b04c16ea0a7bfc95ac07ce61c138575f9b86d93a47f9315f69611734eb3b7d42dabb31f858bc9bced3659d28a16f848782f8f68039d61ca6f4 WHIRLPOOL 874db1c155871992f614bcd5a35295e8ed84074bb88570208257fedc7e48eb4ed122c119c2d3180db04e762fd98e9f05d745c8272ad7f84d3d9b4262b665f255
+MISC ChangeLog 35043 SHA256 5f4c07121269f93f9787876309d88af077dc3b1bf0564da3545efa877d1367a8 SHA512 2081cae8753e44ac8d6a69382eedf734f57a3e43938b090d8efacd4bfde2a443904c68cd0acfab617b7b5f89b811a91f9ba87771a985d11b8f29f6a61b3b8aed WHIRLPOOL 7660db867a3985b90a057c021bf8bec341c08a49944ee02619bf333f3c4ba1eea75dcc85a32e911c25c45bfeec7e86de62cfcd572475b620570bf0b7adab36bb
 MISC metadata.xml 533 SHA256 85e5cf7dda5967132711e350d6b4194f7e2c5bece3732ce74d912c28f0afb3bc SHA512 561f9e4a87bc3518664912bf9e3dd6d83366a154038e3c2a901d8275a2b3a40e711e47ea555eacbed816cea36a174ffe2a7f63895ca006491f4e1efec5f7a27e WHIRLPOOL d4dfacd52a04d2737b3abb2a7d4f6772980a97759dae6fa80bef1863b356902612a0702cd9894148145f122771bfb977c48c086cc2ebc67ea07300c64b7d7313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIIzJEACgkQPDPGULV25OMBGwCgoajCQ7Ss9BGk1beazJP2kdU0
-hQsAoLyXDZkPcHp//rG5DYkcY8k6+h5C
-=mp9N
+iEYEAREIAAYFAlISCzkACgkQPDPGULV25OMClgCfQjHCqPaG7JHnaczLtajBRv54
+0/QAoNHhC57LQ35gxHYbBNXjVfT7cL6c
+=fMhZ
 -----END PGP SIGNATURE-----
